// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lane C golden — the phone (390 × 844 iOS) (a) /contract for the fixture job (no invitee email on file) 1`] = `
{
  "lines": 932,
  "sha256": "22a2946aefab2e6370f160f79712167398358b6eced764041e595a908644de9e",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (b) /change-order, a new CO on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "e494fcb979b3759e67d8865b558d89da1ae94838338ed798a238418d69a8931e",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (c) /estimate-wizard for a job that already has an estimate 1`] = `
{
  "lines": 434,
  "sha256": "58ff692a3da8dfc92fc062520a1717eca5b87ece9317f208ba4d8553bd9df464",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (d) /smart-proposal for the fixture job 1`] = `
{
  "lines": 626,
  "sha256": "ba85327b1c4e7802b449f632487e91f86073797dfa7990f4c63d703879596933",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (e) /quick-quote 1`] = `
{
  "lines": 435,
  "sha256": "0694f6d0197a737827c93e398ec3c51edcf15e2134c1ab2350d7883350476542",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (f) /invoice, an overdue sent invoice 1`] = `
{
  "lines": 993,
  "sha256": "9729ac79b6f0765dd68596b46a70f3a9f81d81f6411e98b3a6af21f62e5089e6",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (g) /invoice, a paid invoice 1`] = `
{
  "lines": 928,
  "sha256": "07abe9befec4156738e0fa857bd97afccf8265221a8b2f0b040173855dbec684",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (h) /invoice, a new invoice on the fixture job 1`] = `
{
  "lines": 1025,
  "sha256": "2704a2719a567324807d4c4c45fd40910bd631cb54cacf2bbe2961dfdc80ebf1",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (i) /payments with two overdue invoices 1`] = `
{
  "lines": 493,
  "sha256": "59ed82fa63e0fdf6e280cdf01ebd142b0e906d1869d2de1558b7742f412a3708",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (j) /lien-waivers for the fixture job 1`] = `
{
  "lines": 471,
  "sha256": "1bf6f8947b5adbaa706d31fa5bb702704b1d25cb4fdac9cdc515123cd4460075",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (k) /sub-portal-setup for a sub on the fixture job 1`] = `
{
  "lines": 490,
  "sha256": "e17b0700b0644e6895cf9e6fae1a6bc353fa55ad5ff039a8835ff1dbe2801c47",
}
`;

exports[`Lane C golden — the phone (390 × 844 iOS) (l) /takeoff-estimate for the fixture job 1`] = `
{
  "lines": 347,
  "sha256": "4062fb61488151c8d90491c7b9337c8cb09d5e5a694eabbef0ed94e5f9b9c66a",
}
`;
